src/objects/SPE_PIValues__c.object
<CustomObject>
    <fields>
        <fullName>BooleanValue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Boolean Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BusinessLine__c</fullName>
        <label>Business Line</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CategoryGroup__c</fullName>
        <label>Category Group</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>FACILITY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT PROCUREMENT &amp; TELECOMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOGISTICS SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PROFESSIONAL SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;D SUBCONTRACTING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRAVEL &amp; FLEET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INTERCONNECT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MECHANICS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPTICAL COMPONENTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEMICONDUCTOR AND RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STANDARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CARE SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXTERNAL WORKFORCE SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NI MATERIALS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBCONTRACTING MS NPO &amp; SI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TESTING MANUFACTURING &amp; MEASUREMENT EQUIPMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUSINESS INCUBATION &amp; E2E SOLUTIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELECTRONIC MANUFACTURING SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBCONTRACTING TELECOM IMPLEMENTATION SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBCONTRACTING OTHER NI SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEACTIVATED STRUCTURES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DISCONTINUED BUSINESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXPENDITURES REPORTED ERRONEOUSLY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NON-MANAGED EXPENDITURES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOT ASSIGNED SPEND GROUP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UNREPORTED SPEND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;D SOLUTIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TESTING AND MANUFACTURING EQUIPMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MECHANICS &amp; RF PRODUCTS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>BUILDING INVESTMENT/CAPEX WITHOUT RENTS AND LEASES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FACILITY MANAGEMENT SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RENTAL/LEASE/TRANSACTIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UTILITIES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APPLICATION DEVELOPMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APPLICATION MAINTENANCE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT HW PERIPHERALS / SERVERS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INFRASTRUCTURE SERVICES &amp; CLOUD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOBILE VOICE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WORKPLACE DEVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASSOCIATED SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRANSPORT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WAREHOUSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUSINESS SERVICES OTHERS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COACHING &amp; OTHER CONSULTING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONSULTING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FINANCIAL TAX &amp; INSURANCES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LEGAL &amp; INTELLECTUAL PROPERTY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MARKETING &amp; COMMUNICATIONS SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OFFICE SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TEST SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRAINING SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FUNCTIONAL TEST EQUIPMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT PERIPHERAL DEVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MANUFACTURING AUXILIARIES AND CONSUMABLES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MANUFACTURING EQUIPMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PERFORMANCE TEST EQUIPMENT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <label>Category Area</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>INDIRECT PROCUREMENT OPERATIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRODUCT PROCUREMENT OPERATIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SERVICES PROCUREMENT OPERATIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UNREPORTED SPEND</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>MYANMAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THAILAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIET NAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INDONESIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JAPAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOUTH KOREA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BANGLADESH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MALAYSIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SINGAPORE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHILIPPINES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRALIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEW ZEALAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANGOLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BULGARIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOSNIA AND HERZEGOVINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POLAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GERMANY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALBANIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GREECE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CROATIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RUSSIAN FEDERATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELARUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UKRAINE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPAIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLOVENIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SERBIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZECH REPUBLIC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DateValue__c</fullName>
        <label>DateValue</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EnterpriseIDEncrypted__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Look up(with Supplier) Enterprise Id field to replace the Enterprise Id text field in all codes. Enterprise Id Text field will be as it is in all layouts.</description>
        <label>EnterpriseID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PI Values (Enterprise Id)</relationshipLabel>
        <relationshipName>PI_Values_EnterpriseLookup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EnterpriseID__c</fullName>
        <encrypted>true</encrypted>
        <label>Enterprise ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter10__c</fullName>
        <label>Filter10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter1__c</fullName>
        <label>Filter1</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter2__c</fullName>
        <label>Filter2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter9_del__c</fullName>
        <label>Filter9</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsConverted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsConverted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MarketUnit__c</fullName>
        <label>Market Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberValue__c</fullName>
        <label>Number Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PI1__c</fullName>
        <label>PI1</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PI2__c</fullName>
        <label>PI2</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PI3__c</fullName>
        <label>PI3</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIDefination__c</fullName>
        <label>PI Defination</label>
        <referenceTo>SPE_PIDefinition__c</referenceTo>
        <relationshipLabel>PI Values</relationshipLabel>
        <relationshipName>PI_Values</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product1__c</fullName>
        <label>Product1</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product2__c</fullName>
        <label>Product2</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product3__c</fullName>
        <label>Product3</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <picklist>
            <picklistValues>
                <fullName>AF AWCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMC 2G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL VODAFONE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL M4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL PLUS CARE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DZ OOREDOO ALGERIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DZ.ORASCOM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALGERIA TELECOM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTI MOVIL ARG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TELEFONICA PANAMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR CTi Movil 3G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR Cablevision NGN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR TELECOM PERSONAL 3G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR TELECOM PDH/SDH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR CLARO ARGENTINA SWAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR TECO TDM Evolution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEXTEL ARGENTINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM Orange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPTUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VODAFONE AUSTRALIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU DOT DTRS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU NBN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT H3G Old</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT Netco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT Caldera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT TMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT H3G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT A1 AUSTRIA CARE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT ORANGE AUSTRIA CARE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT A1 TA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Market</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Respondent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Respondent</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>PI Values</relationshipLabel>
        <relationshipName>PI_Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SPETracker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SPE Tracker</label>
        <referenceTo>SPE_SPETracker__c</referenceTo>
        <relationshipLabel>PI Values</relationshipLabel>
        <relationshipName>PI_Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StringValue__c</fullName>
        <label>String Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubRegion__c</fullName>
        <label>Market Unit</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier_DeprecatedDoNotUse</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.ParentId</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PI Values</relationshipLabel>
        <relationshipName>PI_Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SurveyComments__c</fullName>
        <label>Survey Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Tracker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Tracker</label>
        <referenceTo>SPE2_SurveyTracker__c</referenceTo>
        <relationshipLabel>PI Values</relationshipLabel>
        <relationshipName>PI_Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PI Values</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PVI-{00000}</displayFormat>
        <label>PI Values ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PI Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SPE_Date_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( DateValue__c ) &amp;&amp; ISPICKVAL(PIDefination__r.ValuesType__c,&apos;Date&apos;)</errorConditionFormula>
        <errorDisplayField>DateValue__c</errorDisplayField>
        <errorMessage>Please enter the Date Value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SPE_Date_validation_reverse</fullName>
        <active>true</active>
        <description>This validation makes sure that if the value type is date, the other values are blank</description>
        <errorConditionFormula>AND( ISPICKVAL(PIDefination__r.ValuesType__c, &apos;Date&apos;) ,OR(NOT(ISBLANK(NumberValue__c)),NOT(ISBLANK(StringValue__c))))</errorConditionFormula>
        <errorMessage>Please enter only Date type value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SPE_Number_validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(PIDefination__r.ValuesType__c,&apos;Number&apos;)&amp;&amp; ISNULL(NumberValue__c)</errorConditionFormula>
        <errorDisplayField>NumberValue__c</errorDisplayField>
        <errorMessage>Please enter the number value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SPE_Number_validation_reverse</fullName>
        <active>true</active>
        <description>This validation makes sure that if the value type is number, the other values are blank</description>
        <errorConditionFormula>AND(   ISPICKVAL(PIDefination__r.ValuesType__c, &apos;Number&apos;) ,OR(NOT(ISBLANK(DateValue__c)),NOT(ISBLANK(StringValue__c))))</errorConditionFormula>
        <errorMessage>Please enter only  Number type value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SPE_String_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( StringValue__c ) &amp;&amp; ISPICKVAL(PIDefination__r.ValuesType__c,&apos;String&apos;)</errorConditionFormula>
        <errorDisplayField>StringValue__c</errorDisplayField>
        <errorMessage>Please enter the String Value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SPE_String_validation_reverse</fullName>
        <active>true</active>
        <description>This validation makes sure that if the value type is string, the other values are blank</description>
        <errorConditionFormula>AND( ISPICKVAL(PIDefination__r.ValuesType__c, &apos;String&apos;) ,OR(NOT(ISBLANK(DateValue__c)),NOT(ISBLANK(NumberValue__c))))</errorConditionFormula>
        <errorMessage>Please enter only String type value</errorMessage>
    </validationRules>
</CustomObject>